2007-06-26  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* ChangeLog: Correction of a bug fix number.

2007-06-25  Roman Kennke  <roman@kennke.org>

	* gnu/java/awt/peer/ClasspathFontPeer.java
	(canDisplay): Take character as integer codepoint.
	* gnu/java/awt/peer/gtk/GdkFontPeer.java
	(canDisplay): Take character as integer codepoint.
	* gnu/java/awt/peer/gtk/GtkComponentPeer.java
	(postMouseEvent): Use MouseEvent constructor with absolute coordinates
	to avoid deadlock (over getLocationOnScreen()).
	* gnu/java/awt/peer/gtk/VolatileImageGraphics.java
	(getDeviceConfiguration): Fall back to the default configuration
	if the component is not set.
	* gnu/java/awt/peer/qt/QtFontMetrics.java
	(canDisplay): Take character as integer codepoint.
	* gnu/java/awt/peer/qt/QtFontPeer.java
	(canDisplay): Take character as integer codepoint.
	* gnu/java/awt/peer/x/XFontPeer2.java
	(canDisplay): Take character as integer codepoint.
	* include/gnu_java_awt_peer_qt_QtFontMetrics.h
	(canDisplay): Take character as integer codepoint.
	* java/awt/Font.java
	(DIALOG): New constant.
	(DIALOG_INPUT): New constant.
	(MONOSPACED): New constant.
	(SANS_SERIF): New constant.
	(SERIF): New constant.
	(Font(Font)): New constructor.
	(canDisplay(char)): Use new canDisplay(int) method.
	(canDisplay(int)): New method.
	(hasLayoutAttributes): New method.
	* java/awt/event/MouseEvent.java
	(absX,absY): New fields.
	(MouseEvent): New constructor with absolute coordinates.
	(getLocationOnScreen): New method.
	(getXOnScreen): New method.
	(getYOnScreen): New method.
	* native/jni/qt-peer/qtfontmetrics.cpp
	(canDisplay): Take character as integer codepoint.

2007-06-25  Mark Wielaard  <mark@klomp.org>

	* native/jni/native-lib/cpnet.c
	(cpnet_aton) Moved variable declaration of inet6_addr so it is
	actually in the scope of its use.

2007-06-25  Dalibor Topic  <robilad@kaffe.org>

	* native/jni/java-net/gnu_java_net_VMPlainSocketImpl.c
	(THROW_NO_IPV6): New macro.